--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://abdul-wk.github.io/",
+  "homepage": "https://abdul-wk.github.io/portfolio",
   "name": "developerfolio",
   "version": "0.1.0",
   "private": true,
